--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8" /><title>ArduPilot AI Reviewer</title></head><body class="bg-[#0f172a]"><div id="root"></div><script type="module" src="src/main.tsx"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AP Param Reviewer</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
